--- a/config/backup.conf
+++ b/config/backup.conf
@@ -1,87 +1,87 @@
 # -----------------------------------
-# 警告...请不要修改或删除这个文件...谢谢
-# 警告...请不要修改或删除这个文件...谢谢
-# 警告...请不要修改或删除这个文件...谢谢
+# 警告...Please do not modify or delete this file...thanks
+# 警告...Please do not modify or delete this file...thanks
+# 警告...Please do not modify or delete this file...thanks
 # -----------------------------------
 
-# ---- 再次提醒 ----
-# 大胸弟...如果你看到了这个...记得不要修改或更改这个文件
+# ---- Remind again----
+#大胸弟... If you see this... remember not to modify or change this file
 
-# ---- 说明 ----
-# 嗯……这个文件呢，是用来备份一些设置的
+# ---- Description----
+#嗯...This file is used to back up some settings.
 #
-mark=v3
+Mark=v3
 #
 #
 
-# ---- V2Ray 传输协议 -----
-v2ray_transport=1
+# ---- V2Ray Transmission Protocol-----
+V2ray_transport=1
 
-#---- V2Ray 端口 -----
-v2ray_port=2333
+#---- V2Ray Port-----
+V2ray_port=2333
 
 #---- UUID -----
-v2ray_id=e55c8d17-2cf3-b21a-bcf1-eeacb011ed79
+V2ray_id=e55c8d17-2cf3-b21a-bcf1-eeacb011ed79
 
 #---- alterId -----
 alterId=233
 
-#---- V2Ray 动态端口开始 -----
+#---- V2Ray Dynamic Port Start-----
 v2ray_dynamicPort_start=10000
 
-#---- V2Ray 动态端口结束 -----
-v2ray_dynamicPort_end=20000
+#---- V2Ray Dynamic Port End-----
+V2ray_dynamicPort_end=20000
 
-#---- 域名 -----
-domain=233blog.com
+#---- Domain Name-----
+Domain=233blog.com
 
 #---- caddy -----
-caddy=
+Caddy=
 
 #---- Shadowsocks -----
-shadowsocks=
+Shadowsocks=
 
-#---- Shadowsocks 端口 -----
-ssport=6666
+#---- Shadowsocks Port-----
+Ssport=6666
 
-#---- Shadowsocks 密码 -----
-sspass=233blog.com
+#---- Shadowsocks Password-----
+Sspass=233blog.com
 
-#---- Shadowsocks 加密协议 -----
-ssciphers=chacha20-ietf
+#---- Shadowsocks Encryption Protocol-----
+Ssciphers=chacha20-ietf
 
-#---- 屏蔽广告 -----
-ban_ad=
+#---- Block ads-----
+Ban_ad=
 
-#---- 网站伪装 -----
-path_status=
+#---- Website Camouflage-----
+Path_status=
 
-#---- 伪装的路径 -----
-path=233blog
+#---- Camouflaged path -----
+Path=233blog
 
-#---- 伪装的网址 -----
-proxy_site=https://liyafly.com
+#---- Disguised URL -----
+Proxy_site=https://liyafly.com
 
 #---- Socks -----
-socks=
+Socks=
 
-#---- Socks 端口-----
-socks_port=233
+#---- Socks Port-----
+Socks_port=233
 
-#---- Socks 用户名 -----
-socks_username=233blog
+#---- Socks Username-----
+Socks_username=233blog
 
-#---- Socks 密码 -----
-socks_userpass=233blog.com
+#---- Socks Password-----
+Socks_userpass=233blog.com
 
 #---- MTProto -----
-mtproto=
+Mtproto=
 
-#---- MTProto 端口-----
-mtproto_port=233
+#---- MTProto Port-----
+Mtproto_port=233
 
-#---- MTProto 用户密钥 -----
-mtproto_secret=lalala
+#---- MTProto User Key -----
+Mtproto_secret=lalala
 
-#---- 屏蔽 BT -----
-ban_bt=true
+#---- Shield BT -----
+Ban_bt=true
